2001-08-08  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/Factory.pm (new): Fixed implimentation of import that I did
	two days ago.

2001-08-06  Elliot Glaysher  <eglayshe@umich.edu>

	* (Sorry about the prolonged abscence)
	* Netcomics/Factory.pm (new): now imports all the 0.13.2 RLIs

2001-07-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* INSTALL: Updated first section to explain in depth about
	changing install paths.

2001-07-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%install): Added compression of some doc files.
	(%changelog): Reformatted so that it would use RCS keyword
	replacement to automatically manage the changelog.
	* Makefile.PL (macro): Changed PKGVERSION to be 1cvs.

2001-07-19  Elliot Glaysher  <eglayshe@umich.edu>

	* debian/netcomics.manpages: Fixed manpage installation, and brought
	packages closer to debian policy (lintian now only reports 2 errors
	with the packages!)

2001-07-19  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/netcomics.pod: Fixed missing words in the paragraph about
	timezones (the one labeled Important).

2001-07-18  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* NEWS: Updated for 0.13.2
	* netcomics.spec (%post data): Fixed bug in script.

2001-07-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%post data): updated oldmodules list
	(Version): Updated to 0.13.2.
	* Makefile (VERSION): updated to 0.13.2.

2001-07-17  Elliot Glaysher  <eglayshe@umich.edu>

	* lib/keenspace: Added file back, because keenspot and keenspace
	are two different services, with different comics hosted on each.
	* Makefile (MODULES): Undid yesterday's changes.
	(OLDMODULES): Undid yesterday's changes.

2001-07-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot (wendy): Fixed so that it can update the type
	correctly.
	* Makefile (MODULES): Changed keenspace to keenspot.
	(OLDMODULES): Added keenspace.