@@ -2,6 +2,8 @@
 
 	* Netcomics/Factory.pm (new): Fixed implimentation of import that I did
 	two days ago.
+	* Netcomics/Factory.pm (new): (2nd commit). REALLY fixed importing on
+	comics with multiple 
 
 2001-08-06  Elliot Glaysher  <eglayshe@umich.edu>
 
